# csse341-labs-sawyerij

./: .gitignore  gen_env_file.sh  script.sh
00_Prelab01/: .gitignore  README.md  docker-compose.yml  gen_env_file.sh
02_Lab02/: docker-compose.yml
03_Lab03/: docker-compose.yml
03_Lab03/exploit/: arp_exploit.c
03_Lab03/volumes/: exploit
04_Lab04/: docker-compose.yml
04_Lab04/volumes/: core
04_Lab04/volumes/code/include/: print_icmp.h  util.h
04_Lab04/volumes/code/src/: CMakeLists.txt  main.c  print_arp.c  print_icmp.c  print_ip.c  util.c
04_lab04/volumes/code/: CMakeLists.txt
04_lab04/volumes/code/include/: log.h  pcap_util.h  print_arp.h  print_ip.h
04_lab04/volumes/code/src/: pcap_util.c  print_icmp.c  print_ip.c
05_Lab05/: build_and_run_ping.sh
05_Lab05/volumes/: vimrc
05_Lab05/volumes/code/include/: ip_util.h  log.h  pcap_util.h
05_Lab05/volumes/code/src/: CMakeLists.txt  icmp_util.c  ip_util.c  ping.c
05_lab05/: docker-compose.yml
05_lab05/volumes/: packages.txt
05_lab05/volumes/code/include/: icmp_util.h
05_lab05/volumes/code/src/: icmp_util.c
06_Lab06/: build_and_run.sh  experiment_results.txt
06_Lab06/volumes/: .gitignore  send_arp
06_Lab06/volumes/code/include/: util.h
06_Lab06/volumes/code/src/: send_arp.c
06_lab06/: docker-compose.yml  gen_env_file.sh
06_lab06/volumes/code/: CMakeLists.txt
06_lab06/volumes/code/include/: arp_util.h
06_lab06/volumes/code/src/: CMakeLists.txt  arp_util.c  send_arp.c  util.c
07_Lab07/: docker-compose.yml
07_Lab07/volumes/: core
07_Lab07/volumes/code/include/: tcp_util.h  util.h
07_Lab07/volumes/code/src/: CMakeLists.txt  tcp_util.c
07_lab07/volumes/code/src/: CMakeLists.txt  pcap_util.c  poison.c  send_arp.c  tcp_util.c
08.5_tcp/: docker-compose.yml
08.5_tcp/volumes/: telnet.pcap
08_Lab08/volumes/: input.txt  output.txt  stderr.txt
08_Lab08/volumes/code/: makefile  simple_loop.c  simple_loop.run  simple_prompt.c  simple_prompt.run
08_lab08/: docker-compose.yml
09_Lab09/: docker-compose.yml  launch_experiment.sh  poison.sh  sniff.sh
09_Lab09/volumes/: core
09_Lab09/volumes/code/src/: CMakeLists.txt  arp_util.c  poison.c  tcp_util.c
10_Lab10/: docker-compose.yml
10_Lab10/volumes/: fix_depends.sh  setup_telnetd.sh
Demos/tcp/volumes/: check_config.sh
Demos/tun/: docker-compose.yml
Demos/tun/volumes/: setup_telnetd.sh
Demos/tun/volumes/code/: client.py  server.py
Project/: docker-compose.yml  launch_demo.sh
Project/volumes/code/include/: sock_util.h
Project/volumes/code/src/: CMakeLists.txt  arp_util_solution.c  poison_solution.c  sniff.c  sock_util.c  tcp_util.c  tcp_util_solution.c  tun_util.c  util.c  vpnclient.c  vpnserver.c
volumes/: create_client_tun.sh  create_server_tun.sh
volumes/code/include/: log.h  tun_util.h  vpnclient.h  vpnserver.h
